--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/adityahogade/MERN_Project#readme",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.0"
+    "mysql2": "^3.16.0",
+    "react-router": "^7.11.0",
+    "react-toastify": "^11.0.5"
   },
   "keywords": []
 }
