--- a/Frontend/Admin/app1/package.json
+++ b/Frontend/Admin/app1/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "day": "^0.0.2",
+    "dayjs": "^1.11.19",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
